--- a/xss/production/test/wgl_collada2.html
+++ b/xss/production/test/wgl_collada2.html
@@ -6,17 +6,19 @@
 <body>
 <style type="text/css">
 	body{
-	background:Black;
+	background:lightskyblue;
 	}
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
             <script type="text/javascript" src="../js/event.js"></script>
             <script type="text/javascript" src="../js/keys.js"></script>
             <script type="text/javascript" src="../js/colors.js"></script>
+            <script type="text/javascript" src="../js/streamer.js"></script>
             <script type="text/javascript" src="../js/three/Three.js"></script>
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
+            <script type="text/javascript" src="../js/three/loaders/ColladaLoader.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -35,8 +37,58 @@ var app_height = window.innerHeight;
 var application = {};
 var clock = new THREE.Clock();
 application.events = new ev.EventHolder();
-// --------RESOURCES---------
-// --------RESOURCES---------
+		var streamer = new stream.Streamer();	
+		streamer.manager = manager;
+		var ResourceUtils = new stream.ResourceUtils();
+	// --------RESOURCES---------
+		var global_package = new stream.Package(streamer);	
+                global_package.add_item(
+		{
+		id:				"pump",
+		resource_type:	RESOURCE_COLLADA_MODEL,
+		src:			"model/pump/pump.dae",
+		frame_width:	null,
+		frame_height:	null,
+		animations:		[],	
+		children:		{}
+		}
+);	
+				var pump;
+				global_package.events.addListener("loaded", function()
+				{
+					pump = streamer.get_resource("pump");
+				});
+			var child_ = {};
+			child_.type_ = 'collada_camera';
+			for(var i = 0; i < global_package.items.length; i++)
+			{
+				if(global_package.items[i].id == "pump")
+					global_package.items[i].children['model_cam'] = child_;
+			}
+			var child_ = {};
+			child_.type_ = 'collada_camera';
+			for(var i = 0; i < global_package.items.length; i++)
+			{
+				if(global_package.items[i].id == "pump")
+					global_package.items[i].children['model_cam1'] = child_;
+			}
+			var child_ = {};
+			child_.type_ = 'collada_camera';
+			for(var i = 0; i < global_package.items.length; i++)
+			{
+				if(global_package.items[i].id == "pump")
+					global_package.items[i].children['model_cam2'] = child_;
+			}
+		global_package.add_item({
+			id:				"invalid_res",
+			resource_type:	RESOURCE_IMAGE,
+			src:			"images/no_res.png",
+			frame_width:	null,
+			frame_height:	null,
+			animations:		[]
+		});		
+		global_package.load();	
+    // --------RESOURCES---------
 renderer.setSize( app_width, app_height );
 manager.streamer = streamer;
 function render() {
@@ -54,97 +106,83 @@ manager.events.dispatch("update", [g_delta, g_elapsed]);
 				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var t_cube1;var material_sphere1;var camera_1;var __panorama_cube1;
-    function create_my_sphere(
-    radius,x_segments,y_segments ) { 
-    var my_sphere;
-	    my_sphere_sphere = new THREE.SphereGeometry(radius, x_segments, y_segments) ;
-	    my_sphere = new THREE.Mesh(my_sphere_sphere, new THREE.MeshBasicMaterial());
-	    manager.scene.add(my_sphere);
-		my_sphere.events = new ev.EventHolder();
-        var this__ = my_sphere;
-		if(my_sphere instanceof THREE.Object3D)
-			manager.scene.add(my_sphere);
-		my_sphere.manager = manager;        
-        my_sphere.mat = null;
-        my_sphere.mat_set = function (value)
-        {
-            my_sphere.mat = value;
-            this.material = value;
-        };
-		return my_sphere;
-			}
+var camera_1;var a_ligth;var d_ligth_1;var light1;var model1;
 threejs_load_resources(manager, function()
 {
-		var urls = ["images/cube/pisa/px.png", "images/cube/pisa/nx.png",
-					"images/cube/pisa/py.png", "images/cube/pisa/ny.png",
-					"images/cube/pisa/pz.png", "images/cube/pisa/nz.png" ];		
-			t_cube1 = THREE.ImageUtils.loadTextureCube( urls );
-			t_cube1.manager = manager;
-material_sphere1 = new THREE.MeshBasicMaterial({
-color:White,envMap:t_cube1,
-	});
-			material_sphere1.manager = manager;
 		    camera_1 = 
-		    new THREE.PerspectiveCamera(60, 1.5, 1, 100000, null) ;	
+		    new THREE.PerspectiveCamera(50, 1.76999998, 0.100000001, 100, null) ;	
 			manager.active_camera = camera_1;
 			camera_1.manager = manager;
-			var __panorama_cube1 = {};
-			var __panorama_cube1_shader = THREE.ShaderUtils.lib[ "cube" ];
-			__panorama_cube1_shader.uniforms[ "tCube" ].texture = t_cube1;
-			var __panorama_cube1_material = new THREE.ShaderMaterial( {
-				fragmentShader: __panorama_cube1_shader.fragmentShader,
-				vertexShader: __panorama_cube1_shader.vertexShader,
-				uniforms: __panorama_cube1_shader.uniforms,
-				depthWrite: false
-			} ),
-			__panorama_cube1_mesh = 
-			new THREE.Mesh( new THREE.CubeGeometry( 100000, 100000, 100000 ), __panorama_cube1_material );
-			__panorama_cube1_mesh.flipSided = true;
-			scene.add( __panorama_cube1_mesh );
-			__panorama_cube1.manager = manager;
+	    a_ligth = 
+	    new THREE.AmbientLight(ivory) ;
+	    manager.scene.add(a_ligth);
+			a_ligth.manager = manager;
+	    d_ligth_1 = 
+	    new THREE.DirectionalLight(White, 2, 0, null) ;
+	    manager.scene.add(d_ligth_1);
+			d_ligth_1.manager = manager;
+	    light1 = 
+	    new THREE.PointLight(deepskyblue, 0.200000003, 0) ;
+	    manager.scene.add(light1);
+			light1.manager = manager;
+		model1 = clone3jsObject( manager.streamer.get_resource('pump').data, manager );	
+		manager.scene.add(model1);
+		model1.events = new ev.EventHolder();			
+			model1.manager = manager;
             manager.events.addListener('update', function(){if(camera_1)camera_1.lookAt(scene.position)});
-            camera_1.position.z = 3200;
+            camera_1.position.x = 50;
+            camera_1.position.z = 50;
+            a_ligth.position.y = 3000;
+            a_ligth.position.z = 3000;
+            d_ligth_1.position.y = 3000;
+            d_ligth_1.position.z = 5000;
+            model1.scale.x = 0.5;
+            model1.scale.y = 0.5;
+            model1.scale.z = 0.5;
             application.mouse_x = null;
             application.mouse_y = null;
-            application.spheres = [];
-            application.timer = null;
-	application.events.addListener("init", function()
+            application.t = 0;
+            application.cam = 0;
+	application.events.addListener("update", function(delta,elapsed)
 	{    
-		for(var i = 0; i < 200; i++)
+		var time = elapsed * 0.000500000024;
+light1.position.x = Math.sin(time * 7) * 3009;
+light1.position.y = Math.cos(time * 5) * 4000;
+light1.position.z = Math.cos(time * 3) * 3009;
+	}
+	);
+	application.events.addListener("keydown", function(keycode)
+	{    
+		if (keycode == C)
 {
-var sphere_1 = 
-create_my_sphere(100, 32, 16)
-;
-sphere_1.mat_set(material_sphere1);
-sphere_1.position.x = Math.random() * 10000 - 5000;
-sphere_1.position.y = Math.random() * 10000 - 5000;
-sphere_1.position.z = Math.random() * 10000 - 5000;
-sphere_1.scale.x = Math.random() * 3 + 1;
-sphere_1.scale.y = sphere_1.scale.x;
-sphere_1.scale.z = sphere_1.scale.x;
-application.spheres.push(sphere_1);
-scene.add(sphere_1);
+if (application.cam < 2)
+{
+application.cam = application.cam + 1;
+}
+else
+{
+application.cam = 0;
+}
 }
 	}
 	);
-	application.events.addListener("update", function()
+	application.events.addListener("switch_cameras", function()
 	{    
-		application.timer = g_elapsed * 9.99999975e-005;
-camera_1.position.x = camera_1.position.x + (application.mouse_x - camera_1.position.x) * 0.0500000007;
-camera_1.position.y = camera_1.position.y + (-application.mouse_y - camera_1.position.y) * 0.0500000007;
-for(var i = 0; i < application.spheres.length; i++)
+		if (application.cam == 0)
 {
-var sphere = application.spheres[i];
-sphere.position.x = 5000 * Math.cos(application.timer + i);
-sphere.position.y = 5000 * Math.sin(application.timer + i * 1.10000002);
+set_active_camera(model1.model_cam);
 }
-	}
-	);
-	application.events.addListener("mousemove", function(x,y)
-	{    
-		application.mouse_x = (x - window.innerWidth / 2) * 10;
-application.mouse_y = (y - window.innerHeight / 2) * 10;
+else
+{
+if (application.cam == 1)
+{
+set_active_camera(model1.model_cam1);
+}
+else
+{
+set_active_camera(model1.model_cam2);
+}
+}
 	}
 	);
 var event_manager = new ev.ThreeEventManager();
