--- a/xss/production/test/wgl_shader_fresnel_cl.html
+++ b/xss/production/test/wgl_shader_fresnel_cl.html
@@ -27,6 +27,9 @@ var g_delta;
 var scene = new THREE.Scene();
 scene.mouse_thru = true;
 var streamer;
+var manager = new threejs.Manager(scene, renderer, null, canvas_position);
+var three_utils = new threejs.Utils();
+manager.events = new ev.EventHolder();
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -35,9 +38,7 @@ application.events = new ev.EventHolder();
 // --------RESOURCES---------
 // --------RESOURCES---------
 renderer.setSize( app_width, app_height );
-var manager = new threejs.Manager(scene, renderer, streamer, canvas_position);
-var three_utils = new threejs.Utils();
-manager.events = new ev.EventHolder();
+manager.streamer = streamer;
 function render() {
 manager.canvas_position = getElementPosition(renderer.domElement);
 var now   = new Date().getTime();
@@ -98,7 +99,7 @@ threejs_load_resources(manager, function()
 					"images/cube/Park2/posy.jpg", "images/cube/Park2/negy.jpg",
 					"images/cube/Park2/posz.jpg", "images/cube/Park2/negz.jpg" ];		
 			t_cube1 = THREE.ImageUtils.loadTextureCube( urls );
-t_cube1.manager = manager;
+			t_cube1.manager = manager;
 			    shader_mat1 = 
 create_my_material(null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null)
  ;
@@ -106,7 +107,7 @@ create_my_material(null, null, null, null, null, null, null, null, null, null, n
 		    camera_1 = 
 		    new THREE.PerspectiveCamera(60, 1.5, 1, 100000, null) ;	
 			manager.active_camera = camera_1;
-camera_1.manager = manager;
+			camera_1.manager = manager;
 			var __panorama_cube1 = {};
 			var __panorama_cube1_shader = THREE.ShaderUtils.lib[ "cube" ];
 			__panorama_cube1_shader.uniforms[ "tCube" ].texture = t_cube1;
@@ -120,10 +121,10 @@ camera_1.manager = manager;
 			new THREE.Mesh( new THREE.CubeGeometry( 100000, 100000, 100000 ), __panorama_cube1_material );
 			__panorama_cube1_mesh.flipSided = true;
 			scene.add( __panorama_cube1_mesh );
-__panorama_cube1.manager = manager;
+			__panorama_cube1.manager = manager;
             shader_mat1.uniforms['tCube'].texture = t_cube1;
-            manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
-            camera_1.position = ;
+            manager.events.addListener('update', function(){if(camera_1)camera_1.lookAt(scene.position)});
+            camera_1.position.z = 3200;
             application.mouse_x = null;
             application.mouse_y = null;
             application.spheres = [];
