--- a/xss/production/test/wgl_text.html
+++ b/xss/production/test/wgl_text.html
@@ -28,6 +28,9 @@ var g_delta;
 var scene = new THREE.Scene();
 scene.mouse_thru = true;
 var streamer;
+var manager = new threejs.Manager(scene, renderer, null, canvas_position);
+var three_utils = new threejs.Utils();
+manager.events = new ev.EventHolder();
 var app_width = window.innerWidth;
 var app_height = window.innerHeight;
 var application = {};
@@ -36,9 +39,7 @@ application.events = new ev.EventHolder();
 // --------RESOURCES---------
 // --------RESOURCES---------
 renderer.setSize( app_width, app_height );
-var manager = new threejs.Manager(scene, renderer, streamer, canvas_position);
-var three_utils = new threejs.Utils();
-manager.events = new ev.EventHolder();
+manager.streamer = streamer;
 function render() {
 manager.canvas_position = getElementPosition(renderer.domElement);
 var now   = new Date().getTime();
@@ -60,31 +61,32 @@ threejs_load_resources(manager, function()
 material_1 = new THREE.MeshLambertMaterial({
 color:Math.random() * 0xffffff,shading:smooth_shading,
 	});
-material_1.manager = manager;
+			material_1.manager = manager;
 		    camera_1 = 
 		    new THREE.PerspectiveCamera(25, 1.5, 1, 10000, null) ;	
 			manager.active_camera = camera_1;
-camera_1.manager = manager;
+			camera_1.manager = manager;
 				__trackball_controls1 = new THREE.TrackballControls( camera_1 );
 				manager.events.addListener("update", function()
 				{				
 					__trackball_controls1.update( c_delta );
 				})
-__trackball_controls1.manager = manager;
+			__trackball_controls1.manager = manager;
 	    light = 
 	    new THREE.DirectionalLight(16777215, 1, 0, null) ;
 	    manager.scene.add(light);
-light.manager = manager;
+			light.manager = manager;
 var text_1_geometry = new THREE.TextGeometry("eXceSs", {
 size:40,height:5,curveSegments:3,weight:"bold",style:"normal",bevelEnabled:true,bevelThickness:2,bevelSize:1
 	});
 	text_1 = new THREE.Mesh(text_1_geometry, material_1); 
 	manager.scene.add(text_1);
-text_1.manager = manager;
-            camera_1.position = ;
-            light.position = ;
-            text_1.position = ;
-            text_1.rotation = ;
+			text_1.manager = manager;
+            camera_1.position.z = 350;
+            light.position.y = 0.5;
+            light.position.z = 1;
+            text_1.position.x = -100;
+            set_rotation_y(text_1.rotation, 30);
 var event_manager = new ev.ThreeEventManager();
 document.onmousemove = function(ev)
 {
